k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mondals-ecommerce
  labels:
    app.kubernetes.io/name: mondals-ecommerce
